Add: feature update me in modules auth
