# src/controllers/auth.controller.ts
@@ -1,6 +1,6 @@
 import { HOST_UPLOAD } from '@/config';
 import { uploadConst } from '@/constants';
-import { LoginDto, RefreshTokenDto } from '@/dtos/auth.dto';
+import { LoginDto, RefreshTokenDto, UpdateMeDto } from '@/dtos/auth.dto';
 import { CreateUserDto } from '@dtos/users.dto';
 import { RequestWithUser } from '@interfaces/auth.interface';
 import { IUser } from '@interfaces/users.interface';
@@ -68,6 +68,31 @@ class AuthController {
       res.setHeader('Set-Cookie', [cookie]);
       res.status(200).json({ data: findUser, meta: tokenData, message: 'refreshed token' });
     } catch (error) {
+      next(error);
+    }
+  };
+
+  public updateMe = async (req: RequestWithUser, res: Response, next: NextFunction) => {
+    try {
+      let avatar = null;
+      if (req.file) {
+        const folderUploadedFile = req.file.path.replace(uploadConst.SAVE_PLACES.ROOT, '');
+        avatar = `${HOST_UPLOAD}${folderUploadedFile}`;
+      }
+
+      const userId: string = req.user._id.toString();
+      const userData: UpdateMeDto = {
+        ...req.body,
+        avatar,
+      };
+      const updateUserData: IUser = await this.authService.updateMe(userId, userData);
+
+      res.status(200).json({ data: updateUserData, message: 'updated' });
+    } catch (error) {
+      // remove path file when error
+      if (req.path && fs.existsSync(req.path)) {
+        fs.unlinkSync(req.path);
+      }
       next(error);
     }
   };
