# swagger.yaml
@@ -112,6 +112,46 @@ paths:
         500:
           description: 'Server Error'
 
+  # [PATCH] auth/update-me
+  /api/auth/update-me:
+    patch:
+      tags:
+        - auth
+      summary: Update me
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                firstName:
+                  type: string
+                  description: firstname of the user
+                lastName:
+                  type: string
+                  description: lastname of the user
+                phone:
+                  type: string
+                  description: phone of the user
+                address:
+                  type: string
+                  description: address of the user
+                avatar:
+                  type: string
+                  description: avatar of the user
+                  format: binary
+      responses:
+        200:
+          description: 'Ok'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
   # [GET] users
   /api/users:
     get:
